--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,10 @@ spring.application.name=book
 
 spring.datasource.url=jdbc:mysql://localhost:3307/transactionbook
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Mayur@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
