--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,12 @@
 			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
 			<version>2.8.3</version>
 		</dependency>
+		<dependency>
+    <groupId>io.github.cdimascio</groupId>
+    <artifactId>java-dotenv</artifactId>
+    <version>5.2.2</version>
+</dependency>
+
 	</dependencies>
 
 	<build>
