--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,14 +1,13 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3307/transactionbook
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=durbulemayu@gmail.com
-spring.mail.password=qaulxpzdvlbjydwi
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
