--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,6 +5,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
+app.cors.allowed-origins=http://localhost:5173, "http://localhost:5174
+
 spring.mail.host=${MAIL_HOST}
 spring.mail.port=${MAIL_PORT}
 spring.mail.username=${MAIL_USERNAME}
