--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,6 +14,8 @@ spring.mail.properties.mail.smtp.starttls.enable = true
 
 app.cors.allowed-origins=http://localhost:5173,http://localhost:5174
 
+server.port=${SERVER_PORT:8080}
+
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
