--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,6 +7,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 app.cors.allowed-origins=http://localhost:5173, "http://localhost:5174
 
+server.port=${SERVER_PORT:8080}
+
 spring.mail.host=${MAIL_HOST}
 spring.mail.port=${MAIL_PORT}
 spring.mail.username=${MAIL_USERNAME}
